--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -31,6 +32,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
     def room_version = "2.2.5"
     //noinspection GradleDependency
     implementation "androidx.room:room-runtime:$room_version"
