--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.STORAGE" />
 
     <application
-        android:name=".story.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -54,6 +54,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".story.StoryView"
+            android:exported="false"
+            />
+        <activity android:name=".tmtimes.TmTimesView"
             android:exported="false"
             />
     </application>
